# swagger.json
@@ -92,7 +92,7 @@
           "summary": "Gets a single event by ID",
           "parameters": [
             {
-              "name": "Event ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -112,7 +112,7 @@
           "summary": "Updates an event by ID",
           "parameters": [
             {
-              "name": "Event ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -209,7 +209,7 @@
           "summary": "Creates a new participant",
           "parameters": [
             {
-              "name": "Event ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -231,10 +231,6 @@
                   "email": {
                     "type": "email",
                     "example": "participant@email.com"
-                  },
-                  "event_id": {
-                    "type": "string",
-                    "example": "Event ID"
                   },
                   "joined_at": {
                     "type": "string",
@@ -272,7 +268,7 @@
           "summary": "Gets a single participant by ID",
           "parameters": [
             {
-              "name": "Participant ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -292,7 +288,7 @@
           "summary": "Updates a participant by ID",
           "parameters": [
             {
-              "name": "Participant ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
@@ -314,10 +310,6 @@
                   "email": {
                     "type": "email",
                     "example": "Updated Email Address"
-                  },
-                  "event_id": {
-                    "type": "string",
-                    "example": "Updated Event ID"
                   },
                   "joined_at": {
                     "type": "string",
@@ -356,7 +348,7 @@
           "summary": "Deletes a participant by ID",
           "parameters": [
             {
-              "name": "Participant ID",
+              "name": "id",
               "in": "path",
               "required": true,
               "type": "string"
